# ispc-tex-rs

./: CHANGES.md  Cargo.toml  Dockerfile  README.md  build.rs
examples/: main.rs
src/: lib.rs
src/ispc/: kernel.rs  kernelx86_64-pc-windows-msvc.lib
